src/test/resources/fails/exc3.s
// unexpected keyword
compile nios-ii de0
end
main:
    r0 = r1;